--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body >
-    <!-- <header class="heder">
+    <header class="heder">
       <div class="container container__heder">
         <nav class="navigation">
           <a href="./index.html" lang="en" class="navigation__logo logo link"
@@ -48,15 +48,51 @@
             >
           </li>
         </ul>
+        <button type="" class="menu-open">
+          <svg class="icon-modal" width="24" height="18"><use href="./images/symbol-defs.svg#icon-menuopen"></use></svg>
+        </button>
       </div>
-    </header> -->
+      <div class="mob-menu">
+        <button type="button" class="menu-close">
+          <svg class="menu-close__icon" width="18" height="18"><use href="./images/symbol-defs.svg#icon-close"></use></svg>
+        </button>
+        <ul class="mob-menu list">
+          <li class="mob-menu__item item">
+            <a href="" class="menu__link link current">Студія</a>
+          </li>
+          <li class="mob-menu__item item">
+            <a href="./portfolio.html" class="menu__link link">Портфоліо</a>
+          </li>
+          <li class="mob-menu__item item">
+            <a href="" class="mob-menu__link link">Контакти</a>
+          </li>
+        </ul>
+          <ul class="mob-connect list">
+            <li class="mob-connect__item">
+              <a href="mailto:info@devstudio.com" class="mob-connect__link link"
+                ><svg class="icon mob-connect__icon-mail"><use href="./images/symbol-defsnev.svg#icon-mail"></use></svg>info@devstudio.com</a
+              >
+            </li>
+            <li class="mob-connect__item">
+              <a href="tel:+380961111111" class="mob-connect__link link"
+                ><svg class="icon mob-connect__icon-mail"><use href="./images/symbol-defsnev.svg#icon-phone"></use></svg>+38 096 111 11 11</a
+              >
+            </li>
+            <ul class="mob-network list">
+              <li class="mob-network__item"><a class="mob-network__link" href="">Instagram</a></li>
+              <li class="mob-network__item"><a class="mob-network__link" href="">Twitter</a></li>
+              <li class="mob-network__item"><a class="mob-network__link" href="">Facebook</a></li>
+              <li class="mob-network__item"><a class="mob-network__link" href="">LinkedIn</a></li>
+            </ul>
+      </div>
+    </header> 
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__button button " data-modal-open>
             Замовити послугу
           </button>
-      </section>
+      </section> -->
       <!-- <section class="peculiarities section">
         <div class="peculiarities__container container">
           <h2 class="peculiarities__title section-title visually-hidden">
