--- a/index.html
+++ b/index.html
@@ -48,42 +48,53 @@
             >
           </li>
         </ul>
-        <button type="" class="menu-open">
+        <button type="" class="menu-open" data-menu-open>
           <svg class="icon-modal" width="24" height="18"><use href="./images/symbol-defs.svg#icon-menuopen"></use></svg>
         </button>
       </div>
-      <div class="mob-menu">
-        <button type="button" class="menu-close">
-          <svg class="menu-close__icon" width="18" height="18"><use href="./images/symbol-defs.svg#icon-close"></use></svg>
-        </button>
-        <ul class="mob-menu list">
-          <li class="mob-menu__item item">
-            <a href="" class="menu__link link current">Студія</a>
-          </li>
-          <li class="mob-menu__item item">
-            <a href="./portfolio.html" class="menu__link link">Портфоліо</a>
-          </li>
-          <li class="mob-menu__item item">
-            <a href="" class="mob-menu__link link">Контакти</a>
-          </li>
-        </ul>
-          <ul class="mob-connect list">
-            <li class="mob-connect__item">
-              <a href="mailto:info@devstudio.com" class="mob-connect__link link"
-                ><svg class="icon mob-connect__icon-mail"><use href="./images/symbol-defsnev.svg#icon-mail"></use></svg>info@devstudio.com</a
-              >
-            </li>
-            <li class="mob-connect__item">
-              <a href="tel:+380961111111" class="mob-connect__link link"
-                ><svg class="icon mob-connect__icon-mail"><use href="./images/symbol-defsnev.svg#icon-phone"></use></svg>+38 096 111 11 11</a
-              >
-            </li>
-            <ul class="mob-network list">
-              <li class="mob-network__item"><a class="mob-network__link" href="">Instagram</a></li>
-              <li class="mob-network__item"><a class="mob-network__link" href="">Twitter</a></li>
-              <li class="mob-network__item"><a class="mob-network__link" href="">Facebook</a></li>
-              <li class="mob-network__item"><a class="mob-network__link" href="">LinkedIn</a></li>
+      <div class="mob-menu is-hidden" data-menu>
+        <div class="container">
+          <button type="button" class="menu-close" data-menu-close>
+            <svg class="menu-close__icon" width="18" height="18"><use href="./images/symbol-defs.svg#icon-close"></use></svg>
+          </button>
+          <div class="mob-menu__top">
+            <ul class="mob-menu__list list">
+              <li class="mob-menu__item item">
+                <a href="" class="mob-menu__link link">Студія</a>
+              </li>
+              <li class="mob-menu__item item">
+                <a href="./portfolio.html" class="mob-menu__link link">Портфоліо</a>
+              </li>
+              <li class="mob-menu__item item">
+                <a href="" class="mob-menu__link link">Контакти</a>
+              </li>
             </ul>
+          </div>
+              <div class="mob-menu__bottom">
+                <ul class="mob-connect__list list">
+                  <li class="mob-connect__item">
+                    <a href="tel:+380961111111" class="mob-connect__tel link"
+                      >+38 096 111 11 11</a
+                    >
+                  </li>
+                  <li class="mob-connect__item">
+                    <a href="mailto:info@devstudio.com" class="mob-connect__mail link"
+                      >info@devstudio.com</a
+                    >
+                  </li>
+                </ul>
+                <ul class="mob-network__list list">
+                  <li class="mob-network__item"><a class="mob-network__link link" href="" target="_blank"
+                  rel="noopener noreferrer nofollow">Instagram</a></li>
+                  <li class="mob-network__item"><a class="mob-network__link link" href="" target="_blank"
+                  rel="noopener noreferrer nofollow">Twitter</a></li>
+                  <li class="mob-network__item"><a class="mob-network__link link" href="" target="_blank"
+                  rel="noopener noreferrer nofollow">Facebook</a></li>
+                  <li class="mob-network__item"><a class="mob-network__link link" href="" target="_blank"
+                  rel="noopener noreferrer nofollow">LinkedIn</a></li>
+                </ul>
+              </div>
+        </div>
       </div>
     </header> 
     <main>
@@ -420,5 +431,6 @@
       </div>
     </div> -->
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
