--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body >
-    <header class="heder">
+    <!-- <header class="heder">
       <div class="container container__heder">
         <nav class="navigation">
           <a href="./index.html" lang="en" class="navigation__logo logo link"
@@ -96,7 +96,7 @@
               </div>
         </div>
       </div>
-    </header> 
+    </header>  -->
     <main>
       <!-- <section class="hero">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
@@ -328,55 +328,57 @@
         </div>
       </section> -->
     </main>
-    <!-- <footer class="footer">
+     <footer class="footer">
       <div class="footer__container-general container">
-      <div class="footer__container">
-        <a href="/" lang="en" class="footer__logo logo link"
-          >Web<span class="logo-text logo-text--light">Studio</span></a
-        >
-        <address class="footer-address address">
-          <ul class="address list">
-            <li class="address__item">
-              <a
-                href="https://goo.gl/maps/VT8MUBx5KfKZdJpg7"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="address__link link"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="address__item">
-              <a
-                href="mailto:info@devstudio.com"
-                class="address__link-mail address__link link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address__item">
-              <a
-                href="tel:+380961111111"
-                class="address__link-tel address__link link"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-      <div class="footer__networks">
-        <p class="footer__networks-text text">Приєднуйтесь</p>
-        <ul class="network list">
-          <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-instagram"></use>
-          </svg></a></li>
-          <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-twitter"></use>
-          </svg></a></li>
-          <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-facebook"></use>
-          </svg></a></li>
-          <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-          </svg></a></li>
+      <div class="footer__tablet">
+        <div class="footer__container">
+          <a href="/" lang="en" class="footer__logo logo link"
+            >Web<span class="logo-text logo-text--light">Studio</span></a
+          >
+          <address class="footer-address address">
+            <ul class="address list">
+              <li class="address__item">
+                <a
+                  href="https://goo.gl/maps/VT8MUBx5KfKZdJpg7"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="address__link link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="address__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="address__link-mail address__link link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address__item">
+                <a
+                  href="tel:+380961111111"
+                  class="address__link-tel address__link link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer__networks">
+          <p class="footer__networks-text text">Приєднуйтесь</p>
+          <ul class="network list">
+            <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-instagram"></use>
+            </svg></a></li>
+            <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-twitter"></use>
+            </svg></a></li>
+            <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-facebook"></use>
+            </svg></a></li>
+            <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+            </svg></a></li>
+        </div>
       </div>
       <form class="futer__form">
         <label for="mail-futer" class="futer__form-label">Підпишіться на розсилку </label>
@@ -391,7 +393,7 @@
           </div>
       </form>
     </div>
-    </footer> -->
+    </footer>
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="button-modal" data-modal-close>
