--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body >
-    <!-- <header class="heder">
+      <header class="heder">
       <div class="container container__heder">
         <nav class="navigation">
           <a href="./index.html" lang="en" class="navigation__logo logo link"
@@ -49,7 +49,7 @@
           </li>
         </ul>
         <button type="" class="menu-open" data-menu-open>
-          <svg class="icon-modal" width="24" height="18"><use href="./images/symbol-defs.svg#icon-menuopen"></use></svg>
+          <svg class="icon-modal" width="40" height="40"><use href="./images/symbol-defs.svg#icon-menuopen"></use></svg>
         </button>
       </div>
       <div class="mob-menu is-hidden" data-menu>
@@ -60,7 +60,7 @@
           <div class="mob-menu__top">
             <ul class="mob-menu__list list">
               <li class="mob-menu__item item">
-                <a href="" class="mob-menu__link link">Студія</a>
+                <a href="" class="mob-menu__link link current">Студія</a>
               </li>
               <li class="mob-menu__item item">
                 <a href="./portfolio.html" class="mob-menu__link link">Портфоліо</a>
@@ -73,7 +73,7 @@
               <div class="mob-menu__bottom">
                 <ul class="mob-connect__list list">
                   <li class="mob-connect__item">
-                    <a href="tel:+380961111111" class="mob-connect__tel link"
+                    <a href="tel:+380961111111" class="mob-connect__tel link current"
                       >+38 096 111 11 11</a
                     >
                   </li>
@@ -96,15 +96,15 @@
               </div>
         </div>
       </div>
-    </header>  -->
+    </header>   
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="hero__button button " data-modal-open>
             Замовити послугу
           </button>
-      </section> -->
-      <!-- <section class="peculiarities section">
+      </section> 
+       <section class="peculiarities section">
         <div class="peculiarities__container container">
           <h2 class="peculiarities__title section-title visually-hidden">
             Особливості
@@ -153,55 +153,107 @@
             </li>
           </ul>
         </div>
-      </section> -->
-      <!-- <section class="about-work section">
+      </section> 
+        <section class="about-work section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="about-work__list list">
             <li class="about-work__item">
-              <div class="about-work__thumb"><img
+              <div class="about-work__thumb">
+                <picture>
+                  <source
+                  srcset="./images/boxone.jpg 1x,
+                        ./images/boxone-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                  sizes="370px"
+                  type="image/jpeg"
+                  >
+                  <img
                 class="about-work__img"
                 src="./images/boxone.jpg"
                 alt="співробітник працюе за компьтером"
                 width="370"
               />
+                </picture>
             <P class="about-work__thumb-text">Десктопні додатки</P>
           </div>
             </li>
             <li class="about-work__item">
-              <div class="about-work__thumb"><img
-                class="about-work__img"
-                src="./images/boxtwo.jpg"
-                alt="співробітник працюе у телефоні"
-                width="370"
-              />
+              <div class="about-work__thumb">
+                <picture>
+                  <source
+                  srcset="./images/boxtwo.jpg 1x,
+                        ./images/boxtwo-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                  sizes="370px"
+                  type="image/jpeg"
+                  >
+                  <img
+                  class="about-work__img"
+                  src="./images/boxtwo.jpg"
+                  alt="співробітник працюе у телефоні"
+                  width="370"
+                />
+                </picture>
             <P class="about-work__thumb-text">Мобільні додатки</P>
           </div>
             </li>
             <li class="about-work__item">
-              <div class="about-work__thumb"><img
-                class="about-work__img"
-                src="./images/boxthree.jpg"
-                alt="співробітник працюе у планшеті"
-                width="370"
-              />
+              <div class="about-work__thumb">
+                <picture>
+                  <source
+                  srcset="./images/boxthree.jpg 1x,
+                        ./images/boxthree-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                  sizes="3370px"
+                  type="image/jpeg"
+                  >
+                  <img
+                  class="about-work__img"
+                  src="./images/boxthree.jpg"
+                  alt="співробітник працюе у планшеті"
+                  width="370"
+                />
             <P class="about-work__thumb-text">Дизайнерські рішення</P>
           </div>
             </li>
           </ul>
         </div>
-      </section> -->
-     <!-- <section class="our-team section">
+      </section>  
+        <section class="our-team section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-cards list">
             <li class="team-cards__item">
+              <picture>
+                  <source
+                  srcset="./images/teamone.jpg 1x,
+                        ./images/teamone-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                  sizes="270px"
+                  type="image/jpeg"
+                  >
+                  <source
+                  srcset="./images/teamone-tab.jpg 1x,
+                        ./images/teamone-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                  sizes="354px"
+                  type="image/jpeg"
+                  >
+                  <source
+                  srcset="./images/teamone-mob.jpg 1x,
+                        ./images/teamone-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                  sizes="450px"
+                  type="image/jpeg"
+                  >
               <img
                 src="./images/teamone.jpg"
                 alt="фото працівника"
                 width="270"
                 class="team-cards__img img"
               />
+                </picture>
             <div class="team-cards__data">
                 <h3 class="team-cards__subtitle subtitle">Ігор Дем'яненко</h3>
                 <p lang="en" class="team-cards__text text">Product Designer</p>
@@ -222,12 +274,37 @@
             </div>
             </li>
             <li class="team-cards__item">
+              <picture>
+                  <source
+                  srcset="./images/teamtwo.jpg 1x,
+                        ./images/teamtwo-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                  sizes="270px"
+                  type="image/jpeg"
+                  >
+                  <source
+                  srcset="./images/teamtwo-tab.jpg 1x,
+                        ./images/teamtwo-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                  sizes="354px"
+                  type="image/jpeg"
+                  >
+                  <source
+                  srcset="./images/teamtwo-mob.jpg 1x,
+                        ./images/teamtwo-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                  sizes="450px"
+                  type="image/jpeg"
+                  >
               <img
+                srcset="./images/teamtwo.jpg 1x,
+                        ./images/teamtwo-2x.jpg 2x"
                 src="./images/teamtwo.jpg"
                 alt="фото працівника"
                 width="270"
                 class="team-cards__img img"
               />
+                </picture>
               <div class="team-cards__data">
                 <h3 class="team-cards__subtitle subtitle">Ольга Рєпіна</h3>
                 <p lang="en" class="team-cards__text text">Frontend Developer</p>
@@ -244,16 +321,39 @@
                   <li class="network__item"><a class="network__link" href=""><svg class="network-icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg></a></li>
-                 </ul>
+                </ul>
               </div>
             </li>
             <li class="team-cards__item">
+              <picture>
+                  <source
+                  srcset="./images/teamthree.jpg 1x,
+                        ./images/teamthree-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                  sizes="270px"
+                  type="image/jpeg"
+                  >
+                  <source
+                  srcset="./images/teamthree-tab.jpg 1x,
+                        ./images/teamthree-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                  sizes="354px"
+                  type="image/jpeg"
+                  >
+                  <source
+                  srcset="./images/teamthree-mob.jpg 1x,
+                        ./images/teamthree-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                  sizes="450px"
+                  type="image/jpeg"
+                  >
               <img
                 src="./images/teamthree.jpg"
                 alt="фото працівника"
                 width="270"
                 class="team-cards__img img"
               />
+                </picture>
               <div class=" team-cards__data">
                 <h3 class="team-cards__subtitle subtitle">Микола Тарасов</h3>
                 <p lang="en" class="team-cards__text text">Marketing</p>
@@ -270,16 +370,39 @@
                   <li class="network__item"><a class="network__link" href=""><svg class="network-icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg></a></li>
-                 </ul>
+                </ul>
               </div>
             </li>
             <li class="team-cards__item">
+              <picture>
+                  <source
+                  srcset="./images/teamfour.jpg 1x,
+                        ./images/teamfour-2x.jpg 2x"
+                  media="(min-width: 1200px)"
+                  sizes="270px"
+                  type="image/jpeg"
+                  >
+                  <source
+                  srcset="./images/teamfour-tab.jpg 1x,
+                        ./images/teamfour-tab-2x.jpg 2x"
+                  media="(min-width: 768px)"
+                  sizes="354px"
+                  type="image/jpeg"
+                  >
+                  <source
+                  srcset="./images/teamfour-mob.jpg 1x,
+                        ./images/teamfour-mob-2x.jpg 2x"
+                  media="(max-width: 767px)"
+                  sizes="450px"
+                  type="image/jpeg"
+                  >
               <img
                 src="./images/teamfour.jpg"
                 alt="фото працівника"
                 width="270"
                 class="team-cards__img img"
               />
+                </picture>
               <div class="team-cards__data">
                 <h3 class="team-cards__subtitle subtitle">Михайло Єрмаков</h3>
                 <p lang="en" class="team-cards__text text">UI Designer</p>
@@ -301,8 +424,8 @@
             </li>
           </ul>
         </div>
-      </section>  -->
-       <!-- <section class="clients section">
+      </section>    
+        <section class="clients section">
         <div class=" container">
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="list clients__list">
@@ -326,9 +449,9 @@
             </svg></a></li>
           </ul>
         </div>
-      </section> -->
+      </section> 
     </main>
-     <footer class="footer">
+      <footer class="footer">
       <div class="footer__container-general container">
       <div class="footer__tablet">
         <div class="footer__container">
@@ -393,8 +516,8 @@
           </div>
       </form>
     </div>
-    </footer>
-    <!-- <div class="backdrop is-hidden" data-modal>
+    </footer> 
+     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="button-modal" data-modal-close>
           <svg class="icon-modal" width="18" height="18"><use href="./images/symbol-defs.svg#icon-close"></use></svg>
@@ -431,7 +554,7 @@
         <button type="submit" class="button-backdrop button">Відправити</button>
       </form>
       </div>
-    </div> -->
+    </div> 
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
