--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </li>
           <li class="connect__item">
             <a href="tel:+380961111111" class="connect__link link"
-              ><svg class="icon connect__icon-mail"><use href="./images/symbol-defsnev.svg#icon-phone"></use></svg>+38 096 111 11 11</a
+              ><svg class="icon connect__icon-phone"><use href="./images/symbol-defsnev.svg#icon-phone"></use></svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
