--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,17 @@
   </head>
   <body >
     <header class="heder">
-      <div class="container__heder container">
+      <div class="container container__heder">
         <nav class="navigation">
           <a href="./index.html" lang="en" class="navigation__logo logo link"
             >Web<span class="logo-text logo-text--dark">Studio</span></a
           >
           <ul class="menu list">
             <li class="menu__item item">
-              <a href="./index.html" class="menu__link link">Студія</a>
+              <a href="" class="menu__link link current">Студія</a>
             </li>
             <li class="menu__item item">
-              <a href="./portfolio.html" class="menu__link link current"
-                >Портфоліо</a
-              >
+              <a href="./portfolio.html" class="menu__link link">Портфоліо</a>
             </li>
             <li class="menu__item item">
               <a href="" class="menu__link link">Контакти</a>
@@ -46,12 +44,59 @@
           </li>
           <li class="connect__item">
             <a href="tel:+380961111111" class="connect__link link"
-              ><svg class="icon connect__icon-mail"><use href="./images/symbol-defsnev.svg#icon-phone"></use></svg>+38 096 111 11 11</a
+              ><svg class="icon connect__icon-phone"><use href="./images/symbol-defsnev.svg#icon-phone"></use></svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
+        <button type="" class="menu-open" data-menu-open>
+          <svg class="icon-modal" width="40" height="40"><use href="./images/symbol-defs.svg#icon-menuopen"></use></svg>
+        </button>
       </div>
-    </header>
+      <div class="mob-menu is-hidden" data-menu>
+        <div class="container">
+          <button type="button" class="menu-close" data-menu-close>
+            <svg class="menu-close__icon" width="18" height="18"><use href="./images/symbol-defs.svg#icon-close"></use></svg>
+          </button>
+          <div class="mob-menu__top">
+            <ul class="mob-menu__list list">
+              <li class="mob-menu__item item">
+                <a href="" class="mob-menu__link link current">Студія</a>
+              </li>
+              <li class="mob-menu__item item">
+                <a href="./portfolio.html" class="mob-menu__link link">Портфоліо</a>
+              </li>
+              <li class="mob-menu__item item">
+                <a href="" class="mob-menu__link link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+              <div class="mob-menu__bottom">
+                <ul class="mob-connect__list list">
+                  <li class="mob-connect__item">
+                    <a href="tel:+380961111111" class="mob-connect__tel link current"
+                      >+38 096 111 11 11</a
+                    >
+                  </li>
+                  <li class="mob-connect__item">
+                    <a href="mailto:info@devstudio.com" class="mob-connect__mail link"
+                      >info@devstudio.com</a
+                    >
+                  </li>
+                </ul>
+                <ul class="mob-network__list list">
+                  <li class="mob-network__item"><a class="mob-network__link link" href="" target="_blank"
+                  rel="noopener noreferrer nofollow">Instagram</a></li>
+                  <li class="mob-network__item"><a class="mob-network__link link" href="" target="_blank"
+                  rel="noopener noreferrer nofollow">Twitter</a></li>
+                  <li class="mob-network__item"><a class="mob-network__link link" href="" target="_blank"
+                  rel="noopener noreferrer nofollow">Facebook</a></li>
+                  <li class="mob-network__item"><a class="mob-network__link link" href="" target="_blank"
+                  rel="noopener noreferrer nofollow">LinkedIn</a></li>
+                </ul>
+              </div>
+        </div>
+      </div>
+    </header>   
     <main>
       <section class="portfolio section container">
           <h1 class="visually-hidden">Наші роботи</h1>
@@ -246,53 +291,55 @@
     </main>
     <footer class="footer">
       <div class="footer__container-general container">
-      <div class="footer__container">
-        <a href="/" lang="en" class="footer__logo logo link"
-          >Web<span class="logo-text logo-text--light">Studio</span></a
-        >
-        <address class="footer-address address">
-          <ul class="address list">
-            <li class="address__item">
-              <a
-                href="https://goo.gl/maps/VT8MUBx5KfKZdJpg7"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="address__link link"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="address__item">
-              <a
-                href="mailto:info@devstudio.com"
-                class="address__link-mail address__link link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address__item">
-              <a
-                href="tel:+380961111111"
-                class="address__link-tel address__link link"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-      <div class="footer__networks">
-        <p class="footer__networks-text text">Приєднуйтесь</p>
-        <ul class="network list">
-          <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-instagram"></use>
-          </svg></a></li>
-          <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-twitter"></use>
-          </svg></a></li>
-          <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-facebook"></use>
-          </svg></a></li>
-          <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
-            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-          </svg></a></li>
+      <div class="footer__tablet">
+        <div class="footer__container">
+          <a href="/" lang="en" class="footer__logo logo link"
+            >Web<span class="logo-text logo-text--light">Studio</span></a
+          >
+          <address class="footer-address address">
+            <ul class="address list">
+              <li class="address__item">
+                <a
+                  href="https://goo.gl/maps/VT8MUBx5KfKZdJpg7"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="address__link link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="address__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="address__link-mail address__link link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address__item">
+                <a
+                  href="tel:+380961111111"
+                  class="address__link-tel address__link link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer__networks">
+          <p class="footer__networks-text text">Приєднуйтесь</p>
+          <ul class="network list">
+            <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-instagram"></use>
+            </svg></a></li>
+            <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-twitter"></use>
+            </svg></a></li>
+            <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-facebook"></use>
+            </svg></a></li>
+            <li class="network__item"><a class=" network__link footer__networks-link" href="#"><svg class="footer-networks-icon" width="20" height="20">
+              <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+            </svg></a></li>
+        </div>
       </div>
       <form class="futer__form">
         <label for="mail-futer" class="futer__form-label">Підпишіться на розсилку </label>
@@ -307,7 +354,7 @@
           </div>
       </form>
     </div>
-    </footer>
+    </footer> 
       </div>
     </footer>
   </body>
